--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
+	<title>Fintan Ryan</title>
 </head>
 <body>
-	
+
+	<div class="body">
+		<header>header</header>
+		<div class="main-title">main title</div>
+		<div class="images">images</div>
+		<div class="newsletter">newsletter</div>
+		<footer>footer</footer>
+	</div>
+
 </body>
 </html>
