link html to css and add basic flexbox structure to page and add images folder to project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +9,65 @@
 	<link rel="stylesheet" href="style.css">
 	<title>Fintan Ryan</title>
 </head>
+
 <body>
 
 	<div class="body">
-		<header>header</header>
-		<div class="main-title">main title</div>
-		<div class="images">images</div>
-		<div class="newsletter">newsletter</div>
-		<footer>footer</footer>
+
+			<div class="content">
+			
+			<header> 
+				<!-- <p>Header with a logo left-aligned and links right-aligned</p> -->
+				<img class="header-logo" src="#">
+				<div class="buttons">
+					<button class="link">link1 </button>
+					<button class="link">link2 </button>
+					<button class="link">link3 </button>
+				</div>
+			</header>
+
+			<div class="main-title">
+				<div class="maintext">
+					<h1>Main Title</h1>
+					<p>This text will probably be a brief bio about me. 
+						<br>No doubt self-deprecating to the point of possibly
+						being self-loathing, 
+						<br>no-doubt with some sad attempts at humour :(
+					</p>
+					<button class="sign-up">sign-up!</button>
+					<img class="main-image" src="#">
+				</div>			
+			</div>
+
+			<div class="image-section">
+				<h2> This will contain a series of images and subtext 
+					<br>that may also act as links, not decided yet.</h2>
+				<div class="images">
+					<img class="image-1" src="#">
+					<img class="image-2" src="#">
+					<img class="image-3" src="#">
+					<img class="image-4" src="#">
+				</div>
+				<div class="image-subtext">
+					<p class="subtext1">subtext1</p>
+					<p class="subtext2">subtext2</p>
+					<p class="subtext3">subtext3</p>
+					<p class="subtext4">subtext4</p>
+				</div>
+			</div>
+
+			<div class="newsletter">
+				<p class="newsletter-text"><h3>Here is some text to convince you to
+					sign-up to my newsletter!</h3></p>
+				<button class="sign-up">sign-up!</button>
+			</div>
+
+			<footer>footer</footer>
+
+		</div>
+
 	</div>
 
 </body>
+
 </html>
