Add alignment styling to header, main-title and images

--- a/index.html
+++ b/index.html
@@ -27,32 +27,32 @@
 			</header>
 
 			<div class="main-title">
-				<div class="maintext">
+				<div class="main-text">
 					<h1>Main Title</h1>
 					<p>This text will probably be a brief bio about me. 
-						<br>No doubt self-deprecating to the point of possibly
-						being self-loathing, 
-						<br>no-doubt with some sad attempts at humour :(
+						No doubt self-deprecating to the point of possibly
+						being self-loathing, no-doubt with some sad attempts at humour :(
 					</p>
-					<button class="sign-up">sign-up!</button>
-					<img class="main-image" src="#">
-				</div>			
+					<button class="sign-up">sign-up!</button>					
+				</div>
+				<img class="main-image" src="#">			
 			</div>
 
 			<div class="image-section">
-				<h2> This will contain a series of images and subtext 
-					<br>that may also act as links, not decided yet.</h2>
+				<h2> This will contain a series of images and subtext that may also 
+					act as links, not decided yet.
+				</h2>
 				<div class="images">
-					<img class="image-1" src="#">
-					<img class="image-2" src="#">
-					<img class="image-3" src="#">
-					<img class="image-4" src="#">
+					<img class="image" src="#">
+					<img class="image" src="#">
+					<img class="image" src="#">
+					<img class="image" src="#">
 				</div>
 				<div class="image-subtext">
-					<p class="subtext1">subtext1</p>
-					<p class="subtext2">subtext2</p>
-					<p class="subtext3">subtext3</p>
-					<p class="subtext4">subtext4</p>
+					<p class="subtext">subtext1</p>
+					<p class="subtext">subtext2</p>
+					<p class="subtext">subtext3</p>
+					<p class="subtext">subtext4</p>
 				</div>
 			</div>
 
@@ -62,7 +62,7 @@
 				<button class="sign-up">sign-up!</button>
 			</div>
 
-			<footer>footer</footer>
+			<div class="footer">footer</div>
 
 		</div>
 
