Add color to background, font & borders

--- a/index.html
+++ b/index.html
@@ -42,17 +42,20 @@
 				<h2> This will contain a series of images and subtext that may also 
 					act as links, not decided yet.
 				</h2>
-				<div class="images">
-					<img class="image" src="#">
-					<img class="image" src="#">
-					<img class="image" src="#">
-					<img class="image" src="#">
-				</div>
-				<div class="image-subtext">
-					<p class="subtext">subtext1</p>
-					<p class="subtext">subtext2</p>
-					<p class="subtext">subtext3</p>
-					<p class="subtext">subtext4</p>
+
+				<div class="imgandtxt">
+					<div class="images">
+						<img class="image" src="#">
+						<img class="image" src="#">
+						<img class="image" src="#">
+						<img class="image" src="#">
+					</div>
+					<div class="image-subtext">
+						<p class="subtext">subtext1</p>
+						<p class="subtext">subtext2</p>
+						<p class="subtext">subtext3</p>
+						<p class="subtext">subtext4</p>
+					</div>
 				</div>
 			</div>
 
@@ -62,7 +65,7 @@
 				<button class="sign-up">sign-up!</button>
 			</div>
 
-			<div class="footer">footer</div>
+			<footer>footer</footer>
 
 		</div>
 
