Group each image and subtext into its own div in the image-section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			
 			<header> 
 				<!-- <p>Header with a logo left-aligned and links right-aligned</p> -->
-				<img class="header-logo" src="#">
+				<img class="logo" src="https://source.unsplash.com/random/240x240">
 				<div class="buttons">
 					<button class="link">link1 </button>
 					<button class="link">link2 </button>
@@ -27,6 +27,7 @@
 			</header>
 
 			<div class="main-title">
+
 				<div class="main-text">
 					<h1>Main Title</h1>
 					<p>This text will probably be a brief bio about me. 
@@ -35,7 +36,11 @@
 					</p>
 					<button class="sign-up">sign-up!</button>					
 				</div>
-				<img class="main-image" src="#">			
+
+				<div class="hero-image">
+					<img class="main-image" src="images/turner1.jpg">
+				</div>	
+
 			</div>
 
 			<div class="image-section">
@@ -44,25 +49,37 @@
 				</h2>
 
 				<div class="imgandtxt">
-					<div class="images">
-						<img class="image" src="#">
-						<img class="image" src="#">
-						<img class="image" src="#">
-						<img class="image" src="#">
-					</div>
-					<div class="image-subtext">
+					<div class="image1">
+						<a href="#"><img class="image" src="#"></a>
 						<p class="subtext">subtext1</p>
+					</div>
+					<div class="image2">
+						<img class="image" src="#">
 						<p class="subtext">subtext2</p>
+					</div>
+					<div class="image3">
+						<img class="image" src="#">
 						<p class="subtext">subtext3</p>
+					</div>
+					<div class="image3">
+						<img class="image" src="#">
 						<p class="subtext">subtext4</p>
 					</div>
 				</div>
 			</div>
 
+			<div class="quote">
+				SOMETHING INTERESTING WRITTEN IN HERE
+			</div>
+
 			<div class="newsletter">
-				<p class="newsletter-text"><h3>Here is some text to convince you to
-					sign-up to my newsletter!</h3></p>
-				<button class="sign-up">sign-up!</button>
+				<div class="newsletter-content">
+					<div class="newsletter-text"><h3>Here is some text to convince you to
+						sign-up to my newsletter!</h3>
+						<button class="sign-up">sign-up!</button>
+					</div>
+				</div>
+				
 			</div>
 
 			<footer>footer</footer>
