Remove one image from image section & add links to remaining images

--- a/index.html
+++ b/index.html
@@ -44,26 +44,22 @@
 			</div>
 
 			<div class="image-section">
-				<h2> This will contain a series of images and subtext that may also 
+				<h2 class="text"> This will contain a series of images and subtext that may also 
 					act as links, not decided yet.
 				</h2>
 
-				<div class="imgandtxt">
-					<div class="image1">
+				<div class="imageandtext">
+					<div class="image1 test">
 						<a href="#"><img class="image" src="#"></a>
 						<p class="subtext">subtext1</p>
 					</div>
-					<div class="image2">
-						<img class="image" src="#">
+					<div class="image2 test">
+						<a href="#"><img class="image" src="#"></a>
 						<p class="subtext">subtext2</p>
 					</div>
-					<div class="image3">
-						<img class="image" src="#">
+					<div class="image3 test">
+						<a href="#"><img class="image" src="#"></a>
 						<p class="subtext">subtext3</p>
-					</div>
-					<div class="image3">
-						<img class="image" src="#">
-						<p class="subtext">subtext4</p>
 					</div>
 				</div>
 			</div>
