Add temp image links to image section

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 				<!-- <p>Header with a logo left-aligned and links right-aligned</p> -->
 				<img class="logo" src="https://source.unsplash.com/random/240x240">
 				<div class="buttons">
-					<button class="link">link1 </button>
-					<button class="link">link2 </button>
-					<button class="link">link3 </button>
+					<a href="#" class="link">link1 </a>
+					<a href="#" class="link">link2 </a>
+					<a href="#" class="link">link3 </a>
 				</div>
 			</header>
 
@@ -48,17 +48,17 @@
 					act as links, not decided yet.
 				</h2>
 
-				<div class="imageandtext">
-					<div class="image1 test">
-						<a href="#"><img class="image" src="#"></a>
+				<div class="image-and-subtext">
+					<div class="image-subtext">
+						<a href="#"><img class="image" src="https://source.unsplash.com/random/360x240"></a>
 						<p class="subtext">subtext1</p>
 					</div>
-					<div class="image2 test">
-						<a href="#"><img class="image" src="#"></a>
+					<div class="image-subtext">
+						<a href="#"><img class="image" src="https://source.unsplash.com/random/360x240"></a>
 						<p class="subtext">subtext2</p>
 					</div>
-					<div class="image3 test">
-						<a href="#"><img class="image" src="#"></a>
+					<div class="image-subtext">
+						<a href="#"><img class="image"  src="https://source.unsplash.com/random/360x240"></a>
 						<p class="subtext">subtext3</p>
 					</div>
 				</div>
