change main image to screen width

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<header> 
 				<!-- <p>Header with a logo left-aligned and links right-aligned</p> -->
 				<img class="logo" src="https://source.unsplash.com/random/240x240">
+				<div class="site-name">Fintan Ryan </div>
 				<div class="buttons">
 					<a href="#" class="link">link1 </a>
 					<a href="#" class="link">link2 </a>
@@ -38,19 +39,20 @@
 				</div>
 
 				<div class="hero-image">
-					<img class="main-image" src="images/turner1.jpg">
+					<img class="main-image" src="images/website-banner.png">
 				</div>	
 
 			</div>
 
 			<div class="image-section">
-				<h2 class="text"> This will contain a series of images and subtext that may also 
+				<div class="text">
+					This will contain a series of images and subtext that may also 
 					act as links, not decided yet.
-				</h2>
-
+					
+				</div>
 				<div class="image-and-subtext">
 					<div class="image-subtext">
-						<a href="#"><img class="image" src="https://source.unsplash.com/random/360x240"></a>
+						<a href="#"><img class="image1" src="./images/BOX_PUSHING.gif"></a>
 						<p class="subtext">subtext1</p>
 					</div>
 					<div class="image-subtext">
