change temp images to gifs & temp hero image to final one

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 				</div>
 			</header>
 
+			<div class="hero-image">
+				<img class="main-image" src="images/banner.jpg">
+			</div>
+
 			<div class="main-title">
 
 				<div class="main-text">
@@ -37,11 +41,6 @@
 					</p>
 					<button class="sign-up">sign-up!</button>					
 				</div>
-
-				<div class="hero-image">
-					<img class="main-image" src="images/website-banner.png">
-				</div>	
-
 			</div>
 
 			<div class="image-section">
@@ -52,16 +51,16 @@
 				</div>
 				<div class="image-and-subtext">
 					<div class="image-subtext">
-						<a href="#"><img class="image1" src="./images/BOX_PUSHING.gif"></a>
-						<p class="subtext">subtext1</p>
+						<a href="#"><img class="image" src="./images/sitting.gif"></a>
+						<p class="subtext">video</p>
 					</div>
 					<div class="image-subtext">
-						<a href="#"><img class="image" src="https://source.unsplash.com/random/360x240"></a>
-						<p class="subtext">subtext2</p>
+						<a href="#"><img class="image" src="./images/drawing.gif"></a>
+						<p class="subtext">drawing</p>
 					</div>
 					<div class="image-subtext">
-						<a href="#"><img class="image"  src="https://source.unsplash.com/random/360x240"></a>
-						<p class="subtext">subtext3</p>
+						<a href="#"><img class="image"  src="./images/carrying.gif"></a>
+						<p class="subtext">projects</p>
 					</div>
 				</div>
 			</div>
@@ -72,12 +71,12 @@
 
 			<div class="newsletter">
 				<div class="newsletter-content">
-					<div class="newsletter-text"><h3>Here is some text to convince you to
-						sign-up to my newsletter!</h3>
-						<button class="sign-up">sign-up!</button>
+					<div class="newsletter-text">
+						Here is some text to convince you to
+						sign-up to my newsletter!
 					</div>
-				</div>
-				
+						<button class="sign-up">sign-up!</button>					
+				</div>				
 			</div>
 
 			<footer>footer</footer>
