add classes to subtext class to allow text alignment

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<h1>Main Title</h1>
 					<p>This text will probably be a brief bio about me. 
 						No doubt self-deprecating to the point of possibly
-						being self-loathing, no-doubt with some sad attempts at humour :(
+						being self-loathing, almost certainly with some sad attempts at humour :(
 					</p>
 					<button class="sign-up">sign-up!</button>					
 				</div>
@@ -56,11 +56,11 @@
 					</div>
 					<div class="image-subtext">
 						<a href="#"><img class="image" src="./images/drawing.gif"></a>
-						<p class="subtext">drawing</p>
+						<p class="subtext drawing">drawing</p>
 					</div>
 					<div class="image-subtext">
 						<a href="#"><img class="image"  src="./images/carrying.gif"></a>
-						<p class="subtext">projects</p>
+						<p class="subtext projects">projects</p>
 					</div>
 				</div>
 			</div>
@@ -79,7 +79,7 @@
 				</div>				
 			</div>
 
-			<footer>footer</footer>
+			<footer>&copy; Fintan Ryan 2022 Thanks to The Odin Project!</footer>
 
 		</div>
 
