--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<header> 
 				<!-- <p>Header with a logo left-aligned and links right-aligned</p> -->
 				<img class="logo" src="https://source.unsplash.com/random/240x240">
-				<div class="site-name">Fintan Ryan </div>
+				<div class="site-name"><a class="link" href="../index.html">Fintan Ryan</a> </div>
 				<div class="buttons">
 					<a href="#" class="link">link1 </a>
 					<a href="#" class="link">link2 </a>
@@ -51,15 +51,15 @@
 				</div>
 				<div class="image-and-subtext">
 					<div class="image-subtext">
-						<a href="#"><img class="image" src="./images/sitting.gif"></a>
-						<p class="subtext">video</p>
+						<a href="./pages/video.html"><img class="image" src="./images/sitting.gif"></a>
+						<p class="subtext video">video</p>
 					</div>
 					<div class="image-subtext">
-						<a href="#"><img class="image" src="./images/drawing.gif"></a>
+						<a href="./pages/drawing.html"><img class="image" src="./images/drawing.gif"></a>
 						<p class="subtext drawing">drawing</p>
 					</div>
 					<div class="image-subtext">
-						<a href="#"><img class="image"  src="./images/carrying.gif"></a>
+						<a href="./pages/projects.html"><img class="image"  src="./images/carrying.gif"></a>
 						<p class="subtext projects">projects</p>
 					</div>
 				</div>
