--- a/index.html
+++ b/index.html
@@ -11,80 +11,73 @@
 </head>
 
 <body>
-
 	<div class="body">
-
-			<div class="content">
-			
-			<header> 
-				<!-- <p>Header with a logo left-aligned and links right-aligned</p> -->
-				<img class="logo" src="https://source.unsplash.com/random/240x240">
-				<div class="site-name"><a class="link" href="../index.html">Fintan Ryan</a> </div>
-				<div class="buttons">
-					<a href="#" class="link">link1 </a>
-					<a href="#" class="link">link2 </a>
-					<a href="#" class="link">link3 </a>
-				</div>
-			</header>
-
-			<div class="hero-image">
-				<img class="main-image" src="images/banner.jpg">
-			</div>
-
-			<div class="main-title">
-
-				<div class="main-text">
-					<h1>Main Title</h1>
-					<p>This text will probably be a brief bio about me. 
-						No doubt self-deprecating to the point of possibly
-						being self-loathing, almost certainly with some sad attempts at humour :(
-					</p>
-					<button class="sign-up">sign-up!</button>					
-				</div>
-			</div>
-
-			<div class="image-section">
-				<div class="text">
-					This will contain a series of images and subtext that may also 
-					act as links, not decided yet.
-					
-				</div>
-				<div class="image-and-subtext">
-					<div class="image-subtext">
-						<a href="./pages/video.html"><img class="image" src="./images/sitting.gif"></a>
-						<p class="subtext video">video</p>
+			<div class="content">			
+				<header> 
+					<img class="logo" src="https://source.unsplash.com/random/240x240">
+					<div class="site-name"><a class="link" href="index.html">Fintan Ryan</a> </div>
+					<div class="buttons">
+						<a href="#" class="link">link1 </a>
+						<a href="#" class="link">link2 </a>
+						<a href="#" class="link">link3 </a>
 					</div>
-					<div class="image-subtext">
-						<a href="./pages/drawing.html"><img class="image" src="./images/drawing.gif"></a>
-						<p class="subtext drawing">drawing</p>
-					</div>
-					<div class="image-subtext">
-						<a href="./pages/projects.html"><img class="image"  src="./images/carrying.gif"></a>
-						<p class="subtext projects">projects</p>
-					</div>
+				</header>
+
+				<div class="hero-image">
+					<img class="main-image" src="images/banner.jpg">
 				</div>
-			</div>
 
-			<div class="quote">
-				SOMETHING INTERESTING WRITTEN IN HERE
-			</div>
+				<div class="main-title">
 
-			<div class="newsletter">
-				<div class="newsletter-content">
-					<div class="newsletter-text">
-						Here is some text to convince you to
-						sign-up to my newsletter!
-					</div>
+					<div class="main-text">
+						<h1>Main Title</h1>
+						<p>This text will probably be a brief bio about me. 
+							No doubt self-deprecating to the point of possibly
+							being self-loathing, almost certainly with some sad attempts at humour :(
+						</p>
 						<button class="sign-up">sign-up!</button>					
-				</div>				
-			</div>
+					</div>
+				</div>
 
-			<footer>&copy; Fintan Ryan 2022 Thanks to The Odin Project!</footer>
+				<div class="image-section">
+					<div class="text">
+						This will contain a series of images and subtext that may also 
+						act as links, not decided yet.
+						
+					</div>
+					<div class="image-and-subtext">
+						<div class="image-subtext">
+							<a href="./pages/video.html"><img class="image" src="./images/sitting.gif"></a>
+							<p class="subtext video">video</p>
+						</div>
+						<div class="image-subtext">
+							<a href="./pages/drawing.html"><img class="image" src="./images/drawing.gif"></a>
+							<p class="subtext drawing">drawing</p>
+						</div>
+						<div class="image-subtext">
+							<a href="./pages/projects.html"><img class="image"  src="./images/carrying.gif"></a>
+							<p class="subtext projects">projects</p>
+						</div>
+					</div>
+				</div>
 
+				<div class="quote">
+					SOMETHING INTERESTING WRITTEN IN HERE
+				</div>
+
+				<div class="newsletter">
+					<div class="newsletter-content">
+						<div class="newsletter-text">
+							Here is some text to convince you to
+							sign-up to my newsletter!
+						</div>
+							<button class="sign-up">sign-up!</button>					
+					</div>				
+				</div>
+
+				<footer>&copy; Fintan Ryan 2022 Thanks to The Odin Project!</footer>
 		</div>
-
 	</div>
-
 </body>
 
 </html>
